--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
